[package]
name = "leknet"
version = "0.1.0"
edition = "2021"
description = "multi-crate bevy networking made easier over bevy_quinnet."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.10.1"
bevy_ecs = "0.10.1"
bevy_reflect = "0.10.1"
bevy_quinnet = "0.4.0"
serde = { version = "1.0.164", features = ["derive"]}
bincode = "1.3.3"
port_scanner = "0.1.5"
bimap = "0.6.3"