[package]
name = "leknet"
version = "0.1.0"
edition = "2021"
description = "multi-crate bevy networking made easier over bevy_quinnet."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.11.2"
bevy_ecs = "0.11.2"
bevy_reflect = "0.11.2"
bevy_renet = "0.0.9"
bevy = "0.11.2"
serde = { version = "1.0.164", features = ["derive"]}
bincode = "1.3.3"
port_scanner = "0.1.5"
bimap = "0.6.3"
anyhow = "1.0.75"

[dev-dependencies]
bevy = "0.11.2"